fix: form is now hidden by default in mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -237,9 +237,14 @@ input[type="checkbox"] {
     grid-area: deleteList;
   }
 
+  .todo-list {
+    margin: 5px 25px 25px 25px;
+  }
+
   .todo {
     display: flex;
     flex-direction: column;
+    gap: 0;
   }
 
   .description {
@@ -250,18 +255,26 @@ input[type="checkbox"] {
   }
 
   .todo-info {
-    padding-bottom: 10px;
+    padding: 8px 16px 0 8px;
     width: 100%;
-    justify-content: space-evenly;
+    flex-wrap: wrap;
+    /* justify-content: space-around; */
+    justify-content: flex-end;
+    gap: 20px;
+  }
+
+  .todo-delete {
+    padding: 0;
   }
 
   .display-form {
     display: block;
-    width: 100px;
+    width: 120px;
     background-color: #303030;
     align-self: center;
     border-bottom-right-radius: 15px;
     border-bottom-left-radius: 15px;
+    padding: 5px;
   }
 
   dialog {
